--- a/external/M17Gateway/BUILD
+++ b/external/M17Gateway/BUILD
@@ -1,17 +1,12 @@
-load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")
-
-filegroup(
-    name = "all_srcs",
+genrule(
+    name = "M17Gateway-bin",
     srcs = glob(["**"]),
-)
+    outs = ["M17Gateway"],
+    cmd = """
+set -euo pipefail
 
-make(
-    name = "M17Gateway",
-    targets = ["M17Gateway"],
-    args = ["-j$$(nproc)"],
-    lib_source = ":all_srcs",
+make -C external/M17Gateway M17Gateway
+cp external/M17Gateway/M17Gateway $(location M17Gateway)
+""",
     visibility = ["//visibility:public"],
-    out_binaries = ["M17Gateway"],
-    out_bin_dir = ".",
-    postfix_script = "cp M17Gateway $INSTALLDIR",
 )
