--- a/external/NextionDriver/BUILD
+++ b/external/NextionDriver/BUILD
@@ -1,17 +1,12 @@
-load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")
-
-filegroup(
-    name = "all_srcs",
+genrule(
+    name = "NextionDriver-bin",
     srcs = glob(["**"]),
-)
+    outs = ["NextionDriver"],
+    cmd = """
+set -euo pipefail
 
-make(
-    name = "NextionDriver",
-    targets = ["NextionDriver"],
-    args = ["-j$$(nproc)"],
-    lib_source = ":all_srcs",
+make -C external/NextionDriver NextionDriver
+cp external/NextionDriver/NextionDriver $(location NextionDriver)
+""",
     visibility = ["//visibility:public"],
-    out_binaries = ["NextionDriver"],
-    out_bin_dir = ".",
-    postfix_script = "cp NextionDriver $INSTALLDIR",
 )
